updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -7,10 +7,9 @@ This is a complete list of available classes:
 - [`Piwik\Archive`](Piwik/Archive.md) &mdash; The **Archive** class is used to query archive data.
 - [`Piwik\ArchiveProcessor\Day`](Piwik/ArchiveProcessor/Day.md) &mdash; This class
 - [`Piwik\ArchiveProcessor\Period`](Piwik/ArchiveProcessor/Period.md) &mdash; This class provides generic methods to archive data for a period (week / month / year).
-- [`Piwik\CacheFile`](Piwik/CacheFile.md) &mdash; This class is used to cache data on the filesystem.
-- [`Piwik\Common`](Piwik/Common.md) &mdash; Static class providing functions used by both the CORE of Piwik and the visitor Tracking engine.
-- [`Piwik\Config`](Piwik/Config.md) &mdash; For general performance (and specifically, the Tracker), we use deferred (lazy) initialization and cache sections.
-- [`Piwik\DataTable`](Piwik/DataTable.md) &mdash; ---- DataTable A DataTable is a data structure used to store complex tables of data.
+- [`Piwik\Common`](Piwik/Common.md) &mdash; Contains helper methods used by both Piwik Core and the Piwik Tracking engine.
+- [`Piwik\Config`](Piwik/Config.md) &mdash; Singleton that provides read &amp; write access to Piwik&#039;s INI configuration.
+- [`Piwik\DataTable`](Piwik/DataTable.md) &mdash; The primary data structure used to store analytics data in Piwik.
 - [`Piwik\DataTable\Map`](Piwik/DataTable/Map.md) &mdash; The DataTable Map is a way to store an array of dataTable.
 - [`Piwik\DataTable\Row`](Piwik/DataTable/Row.md) &mdash; A DataTable is composed of rows.
 - [`Piwik\Date`](Piwik/Date.md) &mdash; Date object widely used in Piwik.
