--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -9,7 +9,6 @@ Index
  * [G](#g)
  * [H](#h)
  * [I](#i)
- * [J](#j)
  * [L](#l)
  * [M](#m)
  * [N](#n)
@@ -66,7 +65,6 @@ Index
 
 ### C
 
-- [`CacheFile`](Piwik/CacheFile.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Common`](Piwik/Common.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Config`](Piwik/Config.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$c()`](Piwik/DataTable/Row.md#$c) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
@@ -98,8 +96,7 @@ Index
 ### D
 
 - [`Day`](Piwik/ArchiveProcessor/Day.md) &mdash; _Class in namespace_ [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
-- [`delete()`](Piwik/CacheFile.md#delete) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
-- [`deleteAll()`](Piwik/CacheFile.md#deleteAll) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
+- [`destroy()`](Piwik/Common.md#destroy) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`DataTable`](Piwik/DataTable.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`deleteColumn()`](Piwik/DataTable.md#deleteColumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`deleteColumns()`](Piwik/DataTable.md#deleteColumns) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -169,10 +166,10 @@ Index
 - [`getPluginForReport()`](Piwik/Archive.md#getPluginForReport) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
 - [`getDataTableFromDataArray()`](Piwik/ArchiveProcessor/Day.md#getDataTableFromDataArray) &mdash; _Method in class_ [`Day`](Piwik/ArchiveProcessor/Day.md)
 - [`getMetricsForDimension()`](Piwik/ArchiveProcessor/Day.md#getMetricsForDimension) &mdash; _Method in class_ [`Day`](Piwik/ArchiveProcessor/Day.md)
-- [`get()`](Piwik/CacheFile.md#get) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
 - [`getRequestVar()`](Piwik/Common.md#getRequestVar) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`getLanguagesList()`](Piwik/Common.md#getLanguagesList) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`getLanguageToCountryList()`](Piwik/Common.md#getLanguageToCountryList) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
+- [`getSqlStringFieldsArray()`](Piwik/Common.md#getSqlStringFieldsArray) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`getSortedByColumnName()`](Piwik/DataTable.md#getSortedByColumnName) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getRowsCountBeforeLimitFilter()`](Piwik/DataTable.md#getRowsCountBeforeLimitFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getRowFromLabel()`](Piwik/DataTable.md#getRowFromLabel) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -355,7 +352,6 @@ Index
 
 ### I
 
-- [`$invalidateOpCacheBeforeRead()`](Piwik/CacheFile.md#$invalidateOpCacheBeforeRead) &mdash; _Property in class_ [`CacheFile`](Piwik/CacheFile.md)
 - [`isEqual()`](Piwik/DataTable.md#isEqual) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`isSubtableLoaded()`](Piwik/DataTable/Row.md#isSubtableLoaded) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`isSummaryRow()`](Piwik/DataTable/Row.md#isSummaryRow) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
@@ -398,11 +394,6 @@ Index
 - [`isLookLikeUrl()`](Piwik/UrlHelper.md#isLookLikeUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`initializeTwig()`](Piwik/View.md#initializeTwig) &mdash; _Method in class_ [`View`](Piwik/View.md)
 
-### J
-
-- [`json_encode()`](Piwik/Common.md#json_encode) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
-- [`json_decode()`](Piwik/Common.md#json_decode) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
-
 ### L
 
 - [`$lockPrivilegeGranted()`](Piwik/Db.md#$lockPrivilegeGranted) &mdash; _Property in class_ [`Db`](Piwik/Db.md)
@@ -412,6 +403,9 @@ Index
 
 ### M
 
+- [`mb_substr()`](Piwik/Common.md#mb_substr) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
+- [`mb_strlen()`](Piwik/Common.md#mb_strlen) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
+- [`mb_strtolower()`](Piwik/Common.md#mb_strtolower) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`$metadata()`](Piwik/DataTable.md#$metadata) &mdash; _Property in class_ [`DataTable`](Piwik/DataTable.md)
 - [`makeFromIndexedArray()`](Piwik/DataTable.md#makeFromIndexedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`mergeSubtables()`](Piwik/DataTable.md#mergeSubtables) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -441,7 +435,6 @@ Index
 
 ### O
 
-- [`opCacheInvalidate()`](Piwik/CacheFile.md#opCacheInvalidate) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
 - [`optimizeTables()`](Piwik/Db.md#optimizeTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`$objectInstance()`](Piwik/ScheduledTask.md#$objectInstance) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 
@@ -493,7 +486,7 @@ Index
 
 ### S
 
-- [`set()`](Piwik/CacheFile.md#set) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
+- [`sanitizeInputValues()`](Piwik/Common.md#sanitizeInputValues) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`sort()`](Piwik/DataTable.md#sort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setRowsCountBeforeLimitFilter()`](Piwik/DataTable.md#setRowsCountBeforeLimitFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setMaximumDepthLevelAllowedAtLeast()`](Piwik/DataTable.md#setMaximumDepthLevelAllowedAtLeast) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -565,6 +558,7 @@ Index
 ### U
 
 - [`unprefixTable()`](Piwik/Common.md#unprefixTable) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
+- [`unsanitizeInputValues()`](Piwik/Common.md#unsanitizeInputValues) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`unlockAllTables()`](Piwik/Db.md#unlockAllTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`unlinkRecursive()`](Piwik/Filesystem.md#unlinkRecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`uninstall()`](Piwik/Plugin.md#uninstall) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
@@ -597,7 +591,6 @@ Index
 ### _
 
 - [`__construct()`](Piwik/API/Request.md#__construct) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
-- [`__construct()`](Piwik/CacheFile.md#__construct) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
 - [`__get()`](Piwik/Config.md#__get) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
 - [`__set()`](Piwik/Config.md#__set) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
 - [`__construct()`](Piwik/DataTable.md#__construct) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
