updated plugins API documentation

--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -12,3 +12,4 @@ This is a complete list of available namespaces:
 - [`Piwik\Plugin`](Piwik/Plugin)
 - [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 - [`Piwik\Tracker`](Piwik/Tracker)
+- [`Piwik\ViewDataTable`](Piwik/ViewDataTable)
