--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -2,6 +2,7 @@ Index
 =====
 ### Letters
  * [A](#a)
+ * [B](#b)
  * [C](#c)
  * [D](#d)
  * [E](#e)
@@ -56,12 +57,19 @@ Index
 - [`addSubperiod()`](Piwik/Period/Day.md#addSubperiod) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`addAction()`](Piwik/Piwik.md#addAction) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`activate()`](Piwik/Plugin.md#activate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`assignTemplateVar()`](Piwik/Plugin/Visualization.md#assignTemplateVar) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
+- [`afterGenericFiltersAreAppliedToLoadedDataTable()`](Piwik/Plugin/Visualization.md#afterGenericFiltersAreAppliedToLoadedDataTable) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
+- [`afterAllFilteresAreApplied()`](Piwik/Plugin/Visualization.md#afterAllFilteresAreApplied) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
 - [`addForm()`](Piwik/View.md#addForm) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`assign()`](Piwik/View.md#assign) &mdash; _Method in class_ [`View`](Piwik/View.md)
 
 ### B
 
 - [`build()`](Piwik/Archive.md#build) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
+- [`beforeLoadDataTable()`](Piwik/Plugin/Visualization.md#beforeLoadDataTable) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
+- [`beforeGenericFiltersAreAppliedToLoadedDataTable()`](Piwik/Plugin/Visualization.md#beforeGenericFiltersAreAppliedToLoadedDataTable) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
+- [`beforeRender()`](Piwik/Plugin/Visualization.md#beforeRender) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
+- [`build()`](Piwik/ViewDataTable/Factory.md#build) &mdash; _Method in class_ [`Factory`](Piwik/ViewDataTable/Factory.md)
 
 ### C
 
@@ -88,6 +96,7 @@ Index
 - [`Controller`](Piwik/Plugin/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
 - [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
 - [`$config()`](Piwik/Plugin/ViewDataTable.md#$config) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`canDisplayViewDataTable()`](Piwik/Plugin/ViewDataTable.md#canDisplayViewDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`$className()`](Piwik/ScheduledTask.md#$className) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`$cachedKnownSegmentsToArchive()`](Piwik/SettingsPiwik.md#$cachedKnownSegmentsToArchive) &mdash; _Property in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`clearCache()`](Piwik/Site.md#clearCache) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
@@ -145,7 +154,7 @@ Index
 - [`fetchAssoc()`](Piwik/Db.md#fetchAssoc) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`Filesystem`](Piwik/Filesystem.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`fetchRemoteFile()`](Piwik/Http.md#fetchRemoteFile) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
-- [`factory()`](Piwik/ViewDataTable.md#factory) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
+- [`Factory`](Piwik/ViewDataTable/Factory.md) &mdash; _Class in namespace_ [`Piwik\ViewDataTable`](Piwik/ViewDataTable)
 
 ### G
 
@@ -337,8 +346,6 @@ Index
 - [`getPathAndQueryFromUrl()`](Piwik/UrlHelper.md#getPathAndQueryFromUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`getTemplateFile()`](Piwik/View.md#getTemplateFile) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`getTemplateVars()`](Piwik/View.md#getTemplateVars) &mdash; _Method in class_ [`View`](Piwik/View.md)
-- [`getAvailableVisualizations()`](Piwik/ViewDataTable.md#getAvailableVisualizations) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getNonCoreViewDataTables()`](Piwik/ViewDataTable.md#getNonCoreViewDataTables) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### H
 
@@ -478,10 +485,11 @@ Index
 - [`redirectToReferrer()`](Piwik/Url.md#redirectToReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`redirectToUrl()`](Piwik/Url.md#redirectToUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`render()`](Piwik/View.md#render) &mdash; _Method in class_ [`View`](Piwik/View.md)
-- [`renderReport()`](Piwik/ViewDataTable.md#renderReport) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
+- [`renderReport()`](Piwik/ViewDataTable/Factory.md#renderReport) &mdash; _Method in class_ [`Factory`](Piwik/ViewDataTable/Factory.md)
 
 ### S
 
+- [`shouldLoadExpanded()`](Piwik/API/Request.md#shouldLoadExpanded) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`sanitizeInputValues()`](Piwik/Common.md#sanitizeInputValues) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`sort()`](Piwik/DataTable.md#sort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setRowsCountBeforeLimitFilter()`](Piwik/DataTable.md#setRowsCountBeforeLimitFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -566,10 +574,10 @@ Index
 - [`verbose()`](Piwik/Log.md#verbose) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`verifyNonce()`](Piwik/Nonce.md#verifyNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
+- [`Visualization`](Piwik/Plugin/Visualization.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
 - [`Visit`](Piwik/Tracker/Visit.md) &mdash; _Class in namespace_ [`Piwik\Tracker`](Piwik/Tracker)
 - [`Version`](Piwik/Version.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`View`](Piwik/View.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
-- [`ViewDataTable`](Piwik/ViewDataTable.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 
 ### W
 
@@ -604,6 +612,7 @@ Index
 - [`__construct()`](Piwik/Plugin.md#__construct) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`__construct()`](Piwik/Plugin/Controller.md#__construct) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`__construct()`](Piwik/Plugin/ViewDataTable.md#__construct) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`__construct()`](Piwik/Plugin/Visualization.md#__construct) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
 - [`__construct()`](Piwik/ScheduledTask.md#__construct) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`__construct()`](Piwik/Site.md#__construct) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__toString()`](Piwik/Site.md#__toString) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
